// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package v1consortium.backend;

option go_package = "v1consortium.backend";

import "google/protobuf/timestamp.proto";

message PoolMemberships {
    string                    Id       = 1; //
    string                    PoolId   = 2; //
    string                    UserId   = 3; //
    google.protobuf.Timestamp JoinedAt = 4; //
    google.protobuf.Timestamp LeftAt   = 5; //
    bool                      IsActive = 6; //
}