// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

option go_package = "v1consortium/api/pbentity";

message RandomSelectionMembers {
  string Id = 1; //
  string SelectionId = 2; //
  string UserId = 3; //
  string TestId = 4; //
  int32 SelectionOrder = 5; //
}
