// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package v1consortium.backend;

option go_package = "v1consortium.backend";

import "google/protobuf/timestamp.proto";

message RandomTestingPools {
    string                    Id             = 1; //
    string                    OrganizationId = 2; //
    string                    ProgramId      = 3; //
    string                    Name           = 4; //
    string                    Description    = 5; //
    bool                      IsActive       = 6; //
    google.protobuf.Timestamp CreatedAt      = 7; //
    google.protobuf.Timestamp UpdatedAt      = 8; //
}