// ==========================================================================
// Code generated and maintained by GoFrame CLI tool. DO NOT EDIT.
// ==========================================================================

syntax = "proto3";

package pbentity;

import "google/protobuf/timestamp.proto";

option go_package = "v1consortium/api/pbentity";

message TestingPrograms {
  string Id = 1; //
  string OrganizationId = 2; //
  string Name = 3; //
  bool IsDotProgram = 4; //
  string DrugPanelType = 5; //
  bool AlcoholTestingEnabled = 6; //
  bool RandomTestingEnabled = 7; //
  string RandomTestingRate = 8; //
  string TestingFrequency = 9; //
  bool IsActive = 10; //
  google.protobuf.Timestamp CreatedAt = 11; //
  google.protobuf.Timestamp UpdatedAt = 12; //
}
